# MSc-DSCI

./: README.md
intelligent-information-retrieval-ST7071CEM/: .env  classification.py  crawl.py  index.py  main.py  pyproject.toml
intelligent-information-retrieval-ST7071CEM/crawler/: author.py  publication.py  pubs.py  selenium.py
intelligent-information-retrieval-ST7071CEM/outputs/: author.json  book.json  books.json  index.json  publication.json
intelligent-information-retrieval-ST7071CEM/public/: index.html  style.css  test.html
intelligent-information-retrieval-ST7071CEM/utils/: clean.py  config.py  files.py  inverted_index.py  logger.py  robots.py
introduction-to-statistical-methods-for-data-science-STW7089CEM/: .Rhistory  STW 7089CEM Introduction To Statistical Methods For Data Science.docx  stat.Rmd
